--- a/style/style.css
+++ b/style/style.css
@@ -1417,8 +1417,8 @@
   text-transform: uppercase;
   display: block;
   border: 1px solid white;
-  border-top: none;
-  border-radius: 0 0 3px 3px;
+  /* border-top: none; */
+  border-radius: 3px 3px 3px 3px;
   width: 25px;
   text-align: center;
   padding: 2px 0;
@@ -1438,7 +1438,8 @@
 
 @media (max-width: 768px) {
   .language {
-    right: 90px;
+    right: 62px;
+    top: 16px;
   }
 }
 
@@ -1489,13 +1490,13 @@
 
   .menu__icon_mobile {
     display: block;
-    margin: 11px 0 0 27px;
+    margin: 4px 0 0 27px;
   }
 }
 
 @media (max-width: 420px) {
   .menu__icon_mobile {
-    margin: 11px 0 0 15px;
+    margin: 0 0 0 15px;
     width: 71px;
   }
 }
@@ -1774,7 +1775,7 @@
 
 @media (max-width: 768px) {
   .s1 .heading {
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 700;
     line-height: 54px;
     text-transform: uppercase;
