--- a/style/style.css
+++ b/style/style.css
@@ -1424,7 +1424,7 @@
   padding: 2px 0;
   position: fixed;
   top: 0;
-  right: 30px;
+  right: 20px;
   z-index: 110;
   color: white;
   transition: 0.25s all;
@@ -1710,7 +1710,7 @@
 .s1 {
   height: 100vh;
   min-height: 600px;
-  background-image: url("../image/section1/bg.png");
+  background-image: url("../image/section1/bg-2.jpg");
 }
 
 @media (max-width: 768px) {
@@ -1724,7 +1724,7 @@
 @media (max-width: 420px) {
   .s1 {
     padding: 82px 0 15px 0;
-    background-image: url("../image/section1/bg-mobile.png");
+    background-image: url("../image/section1/bg-2.jpg");
   }
 }
 
@@ -1740,7 +1740,7 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   -ms-align-items: center;
-  align-items: center;
+  align-items: flex-end;
   height: 100%;
 }
 
@@ -1775,7 +1775,7 @@
 
 @media (max-width: 768px) {
   .s1 .heading {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 700;
     line-height: 54px;
     text-transform: uppercase;
