--- a/style/style.css
+++ b/style/style.css
@@ -1740,8 +1740,9 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   -ms-align-items: center;
-  align-items: flex-end;
+  align-items: center;
   height: 100%;
+  padding-top: 478px;
 }
 
 @media (max-width: 768px) {
@@ -1828,13 +1829,47 @@
 .s2 .text:before {
   content: '';
   position: absolute;
-  top: 12px;
-  left: 0;
+  top: -16px;
+  left: 15px;
   z-index: 1;
   width: 67px;
   height: 68px;
   background-repeat: no-repeat;
-  background-image: url("../image/section2/logo.png");
+  background-image: url("../image/section2/logo_s2.png");
+}
+
+.s2 .text__list {
+  margin-top: 40px;
+}
+
+.s2 .text__list_item {
+  margin-bottom: 30px;
+}
+
+.s2 .text__list_item::before {
+  content: '';
+  position: absolute;
+  top: -30px;
+  left: 2px;
+  z-index: 1;
+  width: 67px;
+  height: 75px;
+  background-repeat: no-repeat;
+  background-image: url("../image/section2/done.svg");
+}
+
+.affter__mail::after {
+  content: "";
+  display: inline-block;
+  width: 60px;
+  /* Размер изображения */
+  height: 60px;
+  background-image: url('../image/section2/mail.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-left: 8px;
+  /* Отступ от текста */
+  vertical-align: middle;
 }
 
 @media (max-width: 420px) {
