--- a/style/style.css
+++ b/style/style.css
@@ -1723,7 +1723,8 @@
 
 @media (max-width: 420px) {
   .s1 {
-    padding: 82px 0 15px 0;
+    max-height: 777px;
+    padding: 0 0 15px 0;
     background-image: url("../image/section1/bg-2.jpg");
   }
 }
