--- a/style/style.css
+++ b/style/style.css
@@ -1710,77 +1710,54 @@
 .s1 {
   height: 100vh;
   min-height: 600px;
-  background-image: url("../image/section1/bg-2.jpg");
+  background-image: url("../image/section1/Gradient2.png");
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 @media (max-width: 768px) {
   .s1 {
-    min-height: 0;
+    min-height: auto;
     height: auto;
-    padding: 152px 0 142px 0;
+    padding: 100px 0;
   }
 }
 
 @media (max-width: 420px) {
   .s1 {
     max-height: 777px;
-    padding: 0 0 15px 0;
-    background-image: url("../image/section1/bg-2.jpg");
+    padding: 50px 0;
+    background-image: url("../image/section1/Gradient2.png");
   }
 }
 
-.s1 .wrapper {
-  display: -webkit-box;
-  display: -ms-box;
-  display: box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -ms-box-align: center;
-  box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  height: 100%;
-  padding-top: 478px;
-}
-
-@media (max-width: 768px) {
-  .s1 .wrapper {
-    display: block;
-  }
-}
-
-.s1 .logo {
-  max-width: 340px;
+.s1 .header {
   width: 100%;
-  display: block;
-  margin: -124px auto 50px auto;
-}
-
-@media (max-width: 768px) {
-  .s1 .logo {
-    margin: 0 auto 14px auto;
-    width: 224px;
-  }
 }
 
 .s1 .heading {
-  color: white;
-  font-size: 60px;
-  font-weight: 700;
-  line-height: 90px;
+  font-size: 120px;
+  font-weight: bold;
   text-transform: uppercase;
-  text-align: center;
+  color: white;
+}
+
+.s1 .heading__p {
+  color: white;
+  font-size: 40px;
+  font-weight: 400;
+  text-transform: uppercase;
 }
 
 @media (max-width: 768px) {
   .s1 .heading {
+    font-size: 36px;
+  }
+
+  .s1 .heading__p {
     font-size: 20px;
-    font-weight: 700;
-    line-height: 54px;
-    text-transform: uppercase;
   }
 }
 
