--- a/style/style.css
+++ b/style/style.css
@@ -1568,7 +1568,7 @@
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 @media (max-width: 768px) {
