Работа с лого второй секции

--- a/style/style.css
+++ b/style/style.css
@@ -1830,7 +1830,7 @@
   width: 67px;
   height: 68px;
   background-repeat: no-repeat;
-  background-image: url("../image/section2/logo_s2.png");
+  background-image: url("../image/section2/logo_v1.svg");
 }
 
 .s2 .text__list {
