--- a/style/style.css
+++ b/style/style.css
@@ -1753,27 +1753,31 @@
 
 @media (max-width: 768px) {
   .s1 .heading {
-    font-size: 76px;
+    font-size: 64px;
   }
 
   .s1 .heading__p {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
 @media (max-width: 425px) {
   .s1 .heading {
-    font-size: 56px;
+    font-size: 48px;
   }
 
   .s1 .heading__p {
-    font-size: 12px;
+    font-size: 14px;
   }
 }
 
 @media (max-width: 375px) {
   .s1 .heading {
     font-size: 36px;
+  }
+
+  .s1 .heading__p {
+    font-size: 12px;
   }
 }
 
@@ -2758,6 +2762,6 @@ button {
 /*# sourceMappingURL=style.css.map */
 
 .menu__icon_mobile {
-  width: 30px;
+  width: 35px;
   margin-top: 15px;
 }
