--- a/style/style.css
+++ b/style/style.css
@@ -2322,13 +2322,13 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 36px;
-  text-align: center;
+  text-align: start;
   margin: 10px 0 24px 0;
 }
 
 @media (max-width: 768px) {
   .s5 .subtitle {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
     line-height: 28px;
     margin: 8px 0 42px 0;
@@ -2779,7 +2779,7 @@ button {
   font-weight: 700;
   line-height: 72px;
   text-transform: uppercase;
-  text-align: center;
+  text-align: start;
 }
 
 @media (max-width: 768px) {
